--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -118,14 +118,13 @@
 
             </div>
           </div>
-          <<<<<<< HEAD </div>
-            <div class="container-fluid"></div>
-
         </div>
+        <div class="container-fluid"></div>
+
+      </div>
 
 
       </div>
-      =======
 
       </div>
       <div class="container-fluid"></div>
@@ -427,7 +426,6 @@
       </div>
       </div>
     </section>
-    <<<<<<< HEAD=======>>>>>>> listas
 
 
 
@@ -437,33 +435,34 @@
 
 
 
-      <section class="container-fluid ">
-        <div class="intro-wrap col-sm-12 negro">
-          <div class="container-fluid">
 
-            <div id="titulo">
-              <h1 style="z-index:10;">TOTAL</h1>
-              <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
-            </div>
+    <section class="container-fluid ">
+      <div class="intro-wrap col-sm-12 negro">
+        <div class="container-fluid">
 
-          </div>
-          <div class="container-fluid">
-            <h1 id="subtitulo">.</h1>
+          <div id="titulo">
+            <h1 style="z-index:10;">TOTAL</h1>
+            <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
           </div>
 
-          <div class="container-fluid">
-            <div class="container-fluid  competencias totalOfertas" style="justify-content: left;">
-              <div class="row">
-                <div class="col-4 col-sm-3 total" id="plantilla5">
-                  <div class="rectanguloOferta">
-                    <h2 class="titulo"></h2>
-                    <h5 class="detalle"></h5>
-                    <img class="imagenKit">
-                    <h2 class="precio"></h2>
-                  </div>
+        </div>
+        <div class="container-fluid">
+          <h1 id="subtitulo">.</h1>
+        </div>
+
+        <div class="container-fluid">
+          <div class="container-fluid  competencias totalOfertas" style="justify-content: left;">
+            <div class="row">
+              <div class="col-4 col-sm-3 total" id="plantilla5">
+                <div class="rectanguloOferta">
+                  <h2 class="titulo"></h2>
+                  <h5 class="detalle"></h5>
+                  <img class="imagenKit">
+                  <h2 class="precio"></h2>
                 </div>
+              </div>
 
-                <<<<<<< HEAD <!-- <section class="container-fluid ">
+              <!-- <section class="container-fluid ">
                   <div class="intro-wrap col-sm-12 negro">
                     <div class="container-fluid">
 
@@ -494,37 +493,35 @@
                     </div>
                   </div>
       </section> -->
-      =======
-      </div>
-      </div>
-      </div>
-      </div>
-      </section>
 
-      >>>>>>> listas
-
-
-      <section class="container-fluid blanco">
-        <div class="intro-wrap col-sm-12">
-          <div class="container-fluid">
-            <<<<<<< HEAD <div id="titulo">
-              <h1 style="z-index:10;">PUMA</h1>
-              <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
+            </div>
           </div>
-          =======
+        </div>
+      </div>
+    </section>
+
+
+
+    <section class="container-fluid blanco">
+      <div class="intro-wrap col-sm-12">
+        <div class="container-fluid">
+          <div id="titulo">
+            <h1 style="z-index:10;">PUMA</h1>
+            <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
+          </div>
+
 
           <div id="titulo">
             <h1 style="z-index:10;">SELENIA</h1>
             <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
           </div>
 
-          >>>>>>> listas
         </div>
         <div class="container-fluid">
           <h1 id="subtitulo">.</h1>
         </div>
         <div class="container-fluid">
-          <<<<<<< HEAD <div class="container-fluid competencias pumaOfertas" style="justify-content: left;">
+          <div class="container-fluid competencias pumaOfertas" style="justify-content: left;">
             <div class="row">
               <div class="col-4 col-sm-3 puma" id="plantilla13">
                 =======
@@ -539,80 +536,80 @@
                         <h2 class="precio"></h2>
                       </div>
                     </div>
-                    <<<<<<< HEAD=======>>>>>>> listas
+                    listas
                   </div>
                 </div>
               </div>
             </div>
-      </section>
+    </section>
 
 
-      <<<<<<< HEAD <section class="container-fluid blanco">
-        <div class="intro-wrap col-sm-12">
-          <div class="container-fluid">
+    <section class="container-fluid blanco">
+      <div class="intro-wrap col-sm-12">
+        <div class="container-fluid">
 
-            <div id="titulo">
-              <h1 style="z-index:10;">SELENIA</h1>
-              <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
-            </div>
-
+          <div id="titulo">
+            <h1 style="z-index:10;">SELENIA</h1>
+            <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
           </div>
-          <div class="container-fluid">
-            <h1 id="subtitulo">.</h1>
-          </div>
-          <div class="container-fluid">
-            <div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;">
-              <div class="row">
-                <div class="col-4 col-sm-3 selenia" id="plantilla6">
-                  <div class="rectanguloOferta">
-                    <h2 class="titulo"></h2>
-                    <h5 class="detalle"></h5>
-                    <img class="imagenKit">
-                    <h2 class="precio"></h2>
-                  </div>
+
+        </div>
+        <div class="container-fluid">
+          <h1 id="subtitulo">.</h1>
+        </div>
+        <div class="container-fluid">
+          <div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;">
+            <div class="row">
+              <div class="col-4 col-sm-3 selenia" id="plantilla6">
+                <div class="rectanguloOferta">
+                  <h2 class="titulo"></h2>
+                  <h5 class="detalle"></h5>
+                  <img class="imagenKit">
+                  <h2 class="precio"></h2>
                 </div>
-
               </div>
+
             </div>
           </div>
         </div>
-        </section>
+      </div>
+    </section>
 
 
-        =======
-        >>>>>>> listas
-        <section class="container-fluid">
-          <div class="intro-wrap col-sm-12">
-            <div class="container-fluid">
-              <div id="titulo">
-                <h1 style="z-index:10;">DE TODO UN POCO</h1>
-                <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
-              </div>
+    =======
+    >>>>>>> listas
+    <section class="container-fluid">
+      <div class="intro-wrap col-sm-12">
+        <div class="container-fluid">
+          <div id="titulo">
+            <h1 style="z-index:10;">DE TODO UN POCO</h1>
+            <h1 id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
+          </div>
 
-            </div>
-            <div class="container-fluid">
-              <h1 id="subtitulo">.</h1>
-            </div>
-            <div class="container-fluid">
-              <div class="container-fluid  competencias ofertasVarias" style="justify-content: left;">
-                <div class="row">
-                  <div class="col-3 col-sm-2 ofertaVarias" id="plantilla9">
-                    <div class="rectanguloOferta">
-                      <h2 class="titulo"></h2>
+        </div>
+        <div class="container-fluid">
+          <h1 id="subtitulo">.</h1>
+        </div>
+        <div class="container-fluid">
+          <div class="container-fluid  competencias ofertasVarias" style="justify-content: left;">
+            <div class="row">
+              <div class="col-3 col-sm-2 ofertaVarias" id="plantilla9">
+                <div class="rectanguloOferta">
+                  <h2 class="titulo"></h2>
 
-                      <img class="imagenKit">
-                      <h2 class="precio"></h2>
-                    </div>
-                  </div>
-
+                  <img class="imagenKit">
+                  <h2 class="precio"></h2>
                 </div>
               </div>
 
             </div>
-            <div class="container-fluid"></div>
-          </div style="height:100px;"> .</div>
           </div>
-        </section>
+
+        </div>
+        <div class="container-fluid"></div>
+      </div style="height:100px;"> .</div>
+      </div>
+    </section>
 
 
 
