--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -133,7 +133,7 @@
 
 
       </div>
-      >>>>>>> listas
+
     </section>
 
     <!-- <section class="container-fluid">
@@ -269,7 +269,7 @@
             </div>
             <div class=" competencias ofertFiltro" id="contenedorPromo">
               <div id="footer">
-                <img id="imagenPromo" src="../images/Metegol.png">
+                <img id="imagenPromo" src="../images/descarga.jfif">
                 <div style="padding-left:5rem;">
                   <h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
 
@@ -524,11 +524,11 @@
           <div class="container-fluid competencias pumaOfertas" style="justify-content: left;">
             <div class="row">
               <div class="col-4 col-sm-3 puma" id="plantilla13">
-                =======
+
                 <div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;">
                   <div class="row">
                     <div class="col-4 col-sm-3 selenia" id="plantilla6">
-                      >>>>>>> listas
+
                       <div class="rectanguloOferta">
                         <h2 class="titulo"></h2>
                         <h5 class="detalle"></h5>
@@ -536,7 +536,7 @@
                         <h2 class="precio"></h2>
                       </div>
                     </div>
-                    listas
+
                   </div>
                 </div>
               </div>
@@ -576,8 +576,7 @@
     </section>
 
 
-    =======
-    >>>>>>> listas
+
     <section class="container-fluid">
       <div class="intro-wrap col-sm-12">
         <div class="container-fluid">
