--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -269,7 +269,7 @@
             </div>
             <div class=" competencias ofertFiltro" id="contenedorPromo">
               <div id="footer">
-                <img id="imagenPromo" src="../images/campera_termo.png">
+                <img id="imagenPromo" src="../images/campera_yerbera.png">
                 <div style="padding-left:5rem;">
                   <h1 id="gancho">Llevando 5 cajas de Advanced <br />(cualquier graduacion)</h1>
                   <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$12500 x bidon </u> </h1>
@@ -289,9 +289,9 @@
                 <img id="imagenPromo" src="../images/premium.jpg">
                 <div style="padding-left:5rem;">
                   <h1 id="gancho">PROMO </h1>
-                  <h1 id="gancho">Llevando 5 cajas</h1>
+                  <h1 id="gancho">Premium Protection</h1>
 
-                  <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$ el bidon</h1>
+                  <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$5600 el bidon</h1>
                 </div>
               </div>
               <!-- 
