--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -31,6 +31,12 @@
 
     gtag('config', 'AW-963730457');
   </script>
+  <script>
+    function myFunction() {
+      location.replace("https://renova-web-2.vercel.app/ofertas")
+    }
+    myFunction()
+  </script>
 
 </head>
 
@@ -38,6 +44,7 @@
 
 
 <body id="top">
+
   <!--Div where the WhatsApp will be rendered-->
   <div id="WAButton" style="font-family: Arial, Helvetica, sans-serif; z-index:10;"></div>
 
