--- a/views/css/main.css
+++ b/views/css/main.css
@@ -70,6 +70,7 @@ body {
   color: #353535;
   margin: 0;
   padding: 0;
+  zoom: 95%; 
 }
 
 /* ------------------------------------------------------------------- 
@@ -1975,26 +1976,41 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  min-height: 800px;
+
   position: relative;
-  padding: 15rem 0 15rem;
+  padding: 5rem;
   color: rgba(255, 255, 255, 0.3);
   z-index:100;
 }
+
+#service_component {
+      background-color: #19191b;
+      background-image: url(../images/services-bg.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      background-size: cover;
+    
+      position: relative;
+      padding: 5rem;
+      color: rgba(255, 255, 255, 0.3);
+      z-index:100;
+    }
 #services .overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(5, 5, 5, 0.95);
+  background-color: rgba(5, 5, 5, 0.60);
 }
 #services .gradient-y {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 600px;
   opacity: .4;
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.85) 0%, transparent 100%);
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.85) 0%, transparent 100%);
