--- a/views/css/main.css
+++ b/views/css/main.css
@@ -1997,13 +1997,15 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
       color: rgba(255, 255, 255, 0.3);
       z-index:100;
     }
+
+    
 #services .overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(5, 5, 5, 0.60);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.35) 55%, rgba(0, 0, 0, 0) 100%);
 }
 #services .gradient-y {
   position: absolute;
